WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
191147
Fix build with VIDEO and WEB_AUDIO disabled
https://bugs.webkit.org/show_bug.cgi?id=191147
Summary
Fix build with VIDEO and WEB_AUDIO disabled
Claudio Saavedra
Reported
2018-11-01 02:44:39 PDT
Fix build with VIDEO and WEB_AUDIO disabled
Attachments
Patch
(9.57 KB, patch)
2018-11-01 02:57 PDT
,
Claudio Saavedra
no flags
Details
Formatted Diff
Diff
Patch
(9.44 KB, patch)
2018-11-01 03:29 PDT
,
Claudio Saavedra
no flags
Details
Formatted Diff
Diff
Patch for landing
(1.57 KB, patch)
2018-11-01 07:54 PDT
,
Adrian Perez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Claudio Saavedra
Comment 1
2018-11-01 02:57:25 PDT
Created
attachment 353590
[details]
Patch
Adrian Perez
Comment 2
2018-11-01 03:23:41 PDT
Comment on
attachment 353590
[details]
Patch Patch LGTM (informally reviewing). Like you mention, building with all the multimedia support disabled is not officially supported, but we try to make it work on a best-effort basis because it can be hugely beneficial for embedded devices which do not need media playback: not only WebKit is slightly smaller, but all the disk space taken by GStreamer and friends is saved as well -- last time I checked this amounted to twenty-something megabytes of disk space savings for WPE.
Claudio Saavedra
Comment 3
2018-11-01 03:29:03 PDT
Created
attachment 353591
[details]
Patch
Claudio Saavedra
Comment 4
2018-11-01 03:30:14 PDT
Patch was broken (mistakenly using VIDEO_TRACK instead of VIDEO in a few places). This one should work, let's see what the EWS bots say.
Adrian Perez
Comment 5
2018-11-01 03:33:06 PDT
Also, please add it in the backports list for 2.22.x:
https://trac.webkit.org/wiki/WebKitGTK/2.22.x
Thanks!
Philippe Normand
Comment 6
2018-11-01 04:01:44 PDT
Comment on
attachment 353591
[details]
Patch Thanks!
WebKit Commit Bot
Comment 7
2018-11-01 04:27:19 PDT
Comment on
attachment 353591
[details]
Patch Clearing flags on attachment: 353591 Committed
r237677
: <
https://trac.webkit.org/changeset/237677
>
WebKit Commit Bot
Comment 8
2018-11-01 04:27:21 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2018-11-01 04:28:27 PDT
<
rdar://problem/45726710
>
Adrian Perez
Comment 10
2018-11-01 06:54:55 PDT
Building WPE with MiniBrowser enabled and VIDEO/WEB_AUDIO disabled results in a build failure. The CMake invocation used was: % cmake -DPORT=WPE -DCMAKE_BUILD_TYPE=Release \ -DENABLE_VIDEO=OFF -DENABLE_WEB_AUDIO=OFF -DENABLE_MINIBROWSER=ON The build fails in the MiniBrowser code with the following error: [100%] Building CXX object Tools/MiniBrowser/wpe/CMakeFiles/MiniBrowser.dir/main.cpp.o .../WebKit/Tools/MiniBrowser/wpe/main.cpp:30:10: fatal error: gst/gst.h: No such file or directory #include <gst/gst.h> ^~~~~~~~~~~ compilation terminated.
Philippe Normand
Comment 11
2018-11-01 07:49:49 PDT
Comment on
attachment 353591
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=353591&action=review
> Tools/MiniBrowser/gtk/main.c:32 > +#if ENABLE_WEB_AUDIO || ENABLE_VIDEO
Hah. This doesn't check the macro values. Can you follow-up, Claudio?
Philippe Normand
Comment 12
2018-11-01 07:50:42 PDT
Ok, nevermind... The issue is in wpe's minibrowser. Forget previous comment :)
Adrian Perez
Comment 13
2018-11-01 07:52:10 PDT
I have a fix already for the WPE MiniBrowser, it's just a few lines so I will commit it as unreviewed build fix in a moment =)
Adrian Perez
Comment 14
2018-11-01 07:54:24 PDT
Created
attachment 353599
[details]
Patch for landing
WebKit Commit Bot
Comment 15
2018-11-01 08:19:22 PDT
Comment on
attachment 353599
[details]
Patch for landing Clearing flags on attachment: 353599 Committed
r237680
: <
https://trac.webkit.org/changeset/237680
>
WebKit Commit Bot
Comment 16
2018-11-01 08:19:24 PDT
All reviewed patches have been landed. Closing bug.
Philippe Normand
Comment 17
2018-11-02 10:38:14 PDT
Comment on
attachment 353591
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=353591&action=review
> Source/WebCore/inspector/agents/InspectorDOMAgent.cpp:2154 > +#if ENABLE(VIDEO) > void InspectorDOMAgent::addEventListenersToNode(Node& node)
Not sure how this couldn't break for you? InspectorInstrumentation::addEventListenersToNodeImpl() calls this method. My !video !web-audio build broke because of that, with a link error. I'll land another follow-up, the ENABLE(VIDEO) should be moved inside the method I think.
Philippe Normand
Comment 18
2018-11-02 10:46:40 PDT
https://trac.webkit.org/r237742
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug