Fix build with VIDEO and WEB_AUDIO disabled https://bugs.webkit.org/show_bug.cgi?id=191147

Reviewed by Philippe Normand.

Source/WebCore:

Supported or not, there were a few build fixes needed
to be able to build WebKit with media disabled. Mostly
low-hanging fruits.

* Modules/mediasource/VideoPlaybackQuality.cpp:
* Modules/mediasource/VideoPlaybackQuality.h:
* Modules/mediasource/VideoPlaybackQuality.idl:
* dom/Document.cpp:
(WebCore::Document::dispatchFullScreenChangeOrErrorEvent):
* inspector/agents/InspectorDOMAgent.cpp:
(WebCore::InspectorDOMAgent::InspectorDOMAgent):
(WebCore::InspectorDOMAgent::didCreateFrontendAndBackend):
* inspector/agents/InspectorDOMAgent.h:
* rendering/RenderThemeGtk.cpp:

Tools:

* MiniBrowser/gtk/main.c:
(main): Condition GST includes and calls


Canonical link: https://commits.webkit.org/205956@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237677 268f45cc-cd09-0410-ab3c-d52691b4dbfc