Source/WebCore/Modules/mediasource/VideoPlaybackQuality.h
@@ -25,6 +25,8 @@
 
 #pragma once
 
+#if ENABLE(VIDEO)
+
 #include <wtf/Ref.h>
 #include <wtf/RefCounted.h>
 
@@ -56,3 +58,5 @@ private:
 };
 
 } // namespace WebCore
+
+#endif // ENABLE(VIDEO)
