Source/WebCore/rendering/RenderThemeGtk.cpp
@@ -295,6 +295,7 @@ static GRefPtr<GdkPixbuf> loadThemedIcon(GtkStyleContext* context, const char* i
 }
 #endif // !GTK_CHECK_VERSION(3, 20, 0)
 
+#if ENABLE(VIDEO)
 static bool nodeHasPseudo(Node& node, const char* pseudo)
 {
     return is<Element>(node) && downcast<Element>(node).pseudo() == pseudo;
@@ -312,6 +313,7 @@ static bool nodeHasClass(Node* node, const char* className)
 
     return element.classNames().contains(className);
 }
+#endif // ENABLE(VIDEO)
 
 RenderThemeGtk::~RenderThemeGtk() = default;
 
