Tools/MiniBrowser/gtk/main.c
@@ -29,7 +29,9 @@
 
 #include "BrowserWindow.h"
 #include <errno.h>
+#if ENABLE_WEB_AUDIO || ENABLE_VIDEO
 #include <gst/gst.h>
+#endif
 #include <gtk/gtk.h>
 #include <string.h>
 #include <webkit2/webkit2.h>
@@ -480,7 +482,9 @@ int main(int argc, char *argv[])
     GOptionContext *context = g_option_context_new(NULL);
     g_option_context_add_main_entries(context, commandLineOptions, 0);
     g_option_context_add_group(context, gtk_get_option_group(TRUE));
+#if ENABLE_WEB_AUDIO || ENABLE_VIDEO
     g_option_context_add_group(context, gst_init_get_option_group());
+#endif
 
     WebKitSettings *webkitSettings = webkit_settings_new();
     webkit_settings_set_enable_developer_extras(webkitSettings, TRUE);
